# pythonisms

./: README.md  decorators.py  linked_list_iterator.py  pyproject.toml  test_iterators.py
